--- a/css/estilos.css
+++ b/css/estilos.css
@@ -73,6 +73,22 @@ header .textos h3 {
 	font-style: italic;
 }
 
+#daily-offer {
+	width: 100%;
+	background-color: rgba(255, 0, 0, 0.8);
+	color: #fff;
+	padding: 10px 0;
+	text-align: center;
+	font-size: 22px;
+	font-weight: 600;
+}
+
+#daily-offer span {
+	font-size: 18px;
+	font-weight: 300;
+	color: #ffeb3b;
+}
+
 .main {
 	background: url('../img/bg-textura.png');
 	background-repeat: repeat;
